src/test/ui/macros/macro-multiple-matcher-bindings.stderr
error: duplicate matcher binding
  --> $DIR/macro-multiple-matcher-bindings.rs:7:16
   |
LL |     ($a:ident, $a:ident) => {};
   |                ^^^^^^^^
   |
note: previous declaration was here
  --> $DIR/macro-multiple-matcher-bindings.rs:7:6
   |
LL |     ($a:ident, $a:ident) => {};
   |      ^^^^^^^^

error: duplicate matcher binding
  --> $DIR/macro-multiple-matcher-bindings.rs:8:16
   |
LL |     ($a:ident, $a:path) => {};
   |                ^^^^^^^
   |
note: previous declaration was here
  --> $DIR/macro-multiple-matcher-bindings.rs:8:6
   |
LL |     ($a:ident, $a:path) => {};
   |      ^^^^^^^^

error: duplicate matcher binding
  --> $DIR/macro-multiple-matcher-bindings.rs:17:18
   |
LL |     ($a:ident, $($a:ident),*) => {};
   |                  ^^^^^^^^
   |
note: previous declaration was here
  --> $DIR/macro-multiple-matcher-bindings.rs:17:6
   |
LL |     ($a:ident, $($a:ident),*) => {};
   |      ^^^^^^^^

error: duplicate matcher binding
  --> $DIR/macro-multiple-matcher-bindings.rs:18:25
   |
LL |     ($($a:ident)+ # $($($a:path),+);*) => {};
   |                         ^^^^^^^
   |
note: previous declaration was here
  --> $DIR/macro-multiple-matcher-bindings.rs:18:8
   |
LL |     ($($a:ident)+ # $($($a:path),+);*) => {};
   |        ^^^^^^^^

error: aborting due to 4 previous errors

